--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -43,11 +43,14 @@
 
     <Button
         android:id="@+id/button_Login"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:layout_marginTop="30dp"
+        android:background="@drawable/round_button"
         android:onClick="ViewDB"
-        android:text="Авторизоваться" />
+        android:text="  Авторизоваться  "
+        android:textColor="@android:color/white" />
 </LinearLayout>
