--- a/app/src/main/res/layout/new_coffee_layout.xml
+++ b/app/src/main/res/layout/new_coffee_layout.xml
@@ -69,7 +69,7 @@
                 android:id="@+id/tv_line1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/material_drawer_divider" />
+                android:background="@color/colorPrimary" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
@@ -115,16 +115,19 @@
 
                 <Button
                     android:id="@+id/button_ApplicationPart"
+                    style="@android:style/Widget.Material.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="8dp"
+                    android:backgroundTint="@color/colorPrimary"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:text="Добавить в заказ" />
 
                 <Button
                     android:id="@+id/button_Application"
+                    style="@android:style/Widget.Material.Button.Colored"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:layout_gravity="center_vertical"
@@ -132,6 +135,7 @@
                     android:elevation="1dp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
+                    android:backgroundTint="@color/colorPrimary"
                     android:text="Оформить заказ" />
 
             </LinearLayout>
