--- a/app/src/main/res/layout/applictionpart_layout.xml
+++ b/app/src/main/res/layout/applictionpart_layout.xml
@@ -7,15 +7,9 @@
         android:id = "@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
-            android:id="@+id/listView_ApplicationPart"
+        <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:id="@+id/recyclerView"/>
 
 </LinearLayout>
